assert(tp->base() != Type::AnyPtr) crash with Unsafe.compareAndExchangeObject*

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b146

      # Internal Error (/home/rwestrel/hs-comp/hotspot/src/share/vm/opto/machnode.cpp:380), pid=3784, tid=3815
      # assert(tp->base() != Type::AnyPtr) failed: not a bare pointer

      After matching the type of CompareAndExchangeP is lost.

            Assignee:
            Roland Westrelin
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: