8167298: assert(tp->base() != Type::AnyPtr) crash with Unsafe.compareAndExchangeObject*

Unsafe.compareAndExchangeObject should keep track of returned type after matching

Reviewed-by: shade, vlivanov